[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Maze generator and solver"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
py-modules = ["a_maze_ing"]

[tool.setuptools.packages.find]
include = ["mazegen*"]